@@ -361,5 +361,5 @@ form.search input.searchbutton {
 }
 
 .chart {
-	background-color: #fff;
+
 }
