@@ -393,5 +393,5 @@ form.search input.searchbutton {
 }
 
 .chart {
-	background-color: #fff;
+	
 }
