@@ -154,7 +154,7 @@ Player Activity = Spieler Aktivität
 Players per day = Spieler pro Tag
 You need to upgrade your flash player = Sie müssen Ihren Flash Player aktualisieren
 Get Flashplayer = FlashPlayer download
-Most time online = Am längsten online
+Most time online (hours) = Am längsten online (Stunden)
 hover over the bars to get more information and click to jump to the player details = Fahre über die Balken für weitere Informationen und klicke um zu den Spielerdetails zu gelangen.
 Only show players with = Zeige Spieler mit nur
 or more kills = oder mehr Frags
